修复了一些潜在的问题 新增权限管理系统